# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: glad.c  glad.h
lib/glfw/: Makefile  cmake_install.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glm/: Makefile.tmp3f387
shaders/: fragment.frag  nullfragment.frag  nullvertex.vert  red.frag  vertex.vert  wooble.frag  wooble.vert
src/: CRC8.c  CRC8.h  DebugPrint.h  GUI.cpp  GUI.h  LearnOpenGL.cpp  Main.cpp  Mesh.cpp  Mesh.h  PostProc.cpp  PostProc.h  Shader.cpp  Shader.h  Texture.h  Texture.h.bak  Triangle.cpp  Triangle.h
